# SpaceInvadersRL

./: .gitignore  README.md  pyproject.toml
examples/: dqn.ipynb  playground.ipynb  ppo.ipynb  trainer.ipynb
spaceinvadersrl/: checkpoint.py  cnn_lstm_policy.py  train.py  video.py
