[tool.poetry]
name = "spaceinvadersrl"
version = "0.1.0"
description = ""
authors = ["twt6xy <twt6xy@virginia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
stable-baselines3 = {extras = ["extra"], version = "^2.3.0"}
numpy = "^1.26.4"
moviepy = "^1.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
black = "^24.4.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
